--- a/index1.html
+++ b/index1.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Pop Art</title>
-<link rel="stylesheet" href="styles4.css">
-<link rel="icon" href="favicon.png">
+<tilte> Pop Art</tilte>
+<link rel="stylesheet" href="style.css">
+
 </head>
-
 <body>
-
 <header>
-<h1> POP ART</h1>
+<h1>POP ART🎨</h1>
 <nav>
-<a href="index1.html">Home</a>
-<a href="index2.html">Gallery</a>
-<a href="index3.html">About</a>
+   <a href="index1.html">HOME</a>
+   <a href="index2.html">GALLERY</a>
+   <a href="index3.html">ABOUT</a>
 </nav>
 </header>
 
 <div class="para">
-<h2>Welcome to the World of Pop Art!</h2>
-<p>Pop Art is bold, colorful, fun, and full of energy.</p>
-<a class="btn" href="index2.html">Explore Gallery</a>
-</para>
-
-
-<a href="index1.html" class="btn">Go Home</a>
-
+    <h2>Welcome To The World Of Pop Art!!</h2>
+    <p>Pop Art is bold, colourful,fun, and creative.</p>
+    <a class="btn" href="index2.html">Explore Gallery</a>
+</div>
 <footer>
-<p>Exclaimer! Only Vibrant People Are Allowed Here 🎨</p>
+    <p>EXCLAIMER!!! ONLY VIBRANT GUYS ARE ALLOWED HERE.</p>
 </footer>
 
+
 </body>
-</html>
- 
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
