--- a/index2.html
+++ b/index2.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pop Art Gallery</title>
-<link rel="stylesheet" href="styles4.css">
-<link rel="icon" href="favicon.png">
+    <title>Pop Art Gallery</title>
+    <link rel="stylesheet" href="style4.css">
 </head>
-
 <body>
-
-<header>
-<h1>POP ART GALLERY</h1>
-<nav>
-<a href="index1.html">Home</a>
-<a href="index2.html">Gallery</a>
-<a href="index3.html">About</a>
-</nav>
-</header>
-
-
+    <header>
+        <h1>POP ART GALLERY</h1>
+        <nav>
+            <a href="index1.html">HOME</a>
+            <a href="index2.html">GALLERY</a>
+            <a href="index3.html">ABOUT</a>
+        </nav>
+    </header>
 <div class="center">
-<h2>Visit a real museum:</h2>
-<a href="https://www.tate.org.uk">Tate Museum</a>
+    <h2>Visit a real art gallery museum:</h2>
+    <a href="https://www.tate.org.uk">Tate Museum</a>
 </div>
 <div class="center">
-<h2>Famous Pop Art Style Images</h2>
+    <h2>Famous Pop Art Style Images</h2>
 </div>
 <div class="gallery">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw0fyS2V-nyqqxp7WWF4cO_bvWdz_ieyVr5A&s">
@@ -32,8 +27,7 @@
 <img src="https://i.pinimg.com/736x/e9/b6/8d/e9b68dfc4187822800c3abadd8d44895.jpg">
 <img src="https://i.pinimg.com/1200x/7f/84/e2/7f84e2d3e01582e0cc2745412e36befc.jpg">
 </div>
-
-<h2>Pop Art Gallery Museum:</h2>
+<h2>Pop Art Gallery Display</h2>
 <div class="gallery">
 <img src="https://i.pinimg.com/1200x/84/06/fc/8406fc84e618457695096eb30a0d1e3e.jpg">
 <img src="https://i.pinimg.com/736x/c5/62/46/c562467e5f03dd5982742d1c324f8365.jpg">
@@ -41,7 +35,9 @@
 <img src="https://i.pinimg.com/736x/13/20/3e/13203e667b71b574a3cc88b1cdd76ea5.jpg">
 </div>
 <footer>
-    <p>* don't forget to search about pop art *</p>
+    <p>‼️ DON'T FORGET TO SEARCH ABOUT POP ART‼️</p>
 </footer>
 </body>
+
+
 </html>
