--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <tilte> Pop Art</tilte>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style4.css">
 
 </head>
 <body>
