--- a/index3.html
+++ b/index3.html
@@ -1,53 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>About -  Pop Art</title>
-<link rel="icon" href="favicon.png">
-<link rel="stylesheet" href="styles4.css">
-</head>
+    <head>
+   <title> Pop Art</title>
+   <link rel="stylesheet" href="style4.css">
+    </head>
 
-<body>
-
+    <body>
 <header>
-<h1>ABOUT POP ART</h1>
-<nav>
-<a href="index1.html">Home</a>
-<a href="index2.html">Gallery</a>
-<a href="index3.html">About</a>
-</nav>
+    <h1>ABOUT</h1>
+    <nav>
+        <a href="index1.html">HOME</a>
+        <a href="index2.html">GALLERY</a>
+        <a href="index3.html">ABOUT</a>
+    </nav>
 </header>
-
 <div class="about">
+    <div class="box1">
+        Pop Art began in the 1950s and uses images from everyday life
+    </div>
+    
+    <div class="box2">
+       It uses bright colors, bold lines and simple shapes
+    </div>
 
-<div class="cont1">
-Pop Art began in the 1950s and uses images from everyday life.
-</div>
+    <div class="box3">
+        I like Pop Art because it is creative and fun
+    </div>
 
-<div class="cont2">
-It uses bright colors, bold lines and simple shapes.
-</div>
 
-<div class="cont3">
-I like Pop Art because it is creative and fun.
-</div>
-
-<h3>Famous Artists</h3>
-<ul>
-<li>Andy Warhol</li>
+    <h3>Famous Artists</h3>
+    <ul>
+        <li>Andy Warhol</li>
 <a href="https://www.instagram.com/andywarholgallery?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
 <li>Roy Lichtenstein</li>
 <a href="https://www.instagram.com/roylichtenstein?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
 <li>Keith Haring</li>
 <a href="https://www.instagram.com/keithharing_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
-</ul>
-
-
+    </ul>
 </div>
 
 <footer>
-<p>Thanks for Visiting My Pop Art Website</p>
+    <p>🕸️__Made by Shumaiza__🕸️</p>
 </footer>
-
-</body>
+    </body>
 </html>
-   
+
+
