--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <h1>404</h1>
-  <p>Oops! This page doesn’t exist.</p>
+  <p>Oops! This page doesn’t exist🤷‍♀️</p>
   <p><a href="index1.html">Go back to Home</a></p>
 </body>
 </html>
