--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
 <header>
     <h1>ABOUT</h1>
     <nav>
-        <a href="index1.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="index2.html">GALLERY</a>
         <a href="index3.html">ABOUT</a>
     </nav>
