--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
 <img src="https://i.pinimg.com/736x/e9/b6/8d/e9b68dfc4187822800c3abadd8d44895.jpg">
 <img src="https://i.pinimg.com/1200x/7f/84/e2/7f84e2d3e01582e0cc2745412e36befc.jpg">
 </div>
-<h2>Pop Art Gallery Display</h2>
+<h2>Pop Art Gallery Display🦩</h2>
 <div class="gallery">
 <img src="https://i.pinimg.com/1200x/84/06/fc/8406fc84e618457695096eb30a0d1e3e.jpg">
 <img src="https://i.pinimg.com/736x/c5/62/46/c562467e5f03dd5982742d1c324f8365.jpg">
