--- a/index3.html
+++ b/index3.html
@@ -40,7 +40,7 @@
 </div>
 
 <footer>
-    <p>🕸️__Made by Shumaiza__🕸️✪ ω ✪</p>
+    <p>✪ ω ✪🕸️__Made by Shumaiza__🕸️✪ ω ✪</p>
 </footer>
     </body>
 </html>
