--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="btn" href="index2.html">Explore Gallery</a>
 </div>
 <footer>
-    <p>EXCLAIMER!!! ONLY VIBRANT GUYS ARE ALLOWED HERE.</p>
+    <p>☠️EXCLAIMER!!! ONLY VIBRANT GUYS ARE ALLOWED HERE.</p>
 </footer>
 
 
