--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
     <a href="https://www.tate.org.uk">Tate Museum</a>
 </div>
 <div class="center">
-    <h2>Famous Pop Art Style Images</h2>
+    <h2>Famous Pop Art Style Images🖼️</h2>
 </div>
 <div class="gallery">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw0fyS2V-nyqqxp7WWF4cO_bvWdz_ieyVr5A&s">
@@ -35,7 +35,7 @@
 <img src="https://i.pinimg.com/736x/13/20/3e/13203e667b71b574a3cc88b1cdd76ea5.jpg">
 </div>
 <footer>
-    <p>‼️ DON'T FORGET TO SEARCH ABOUT POP ART‼️</p>
+    <p> * DON'T FORGET TO SEARCH ABOUT POP ART *</p>
 </footer>
 </body>
 
