--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <tilte> Pop Art</tilte>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style4.css">
 
 </head>
 <body>
 <header>
-<h1>POP ART</h1>
+<h1>POP ART🎨</h1>
 <nav>
    <a href="index.html">HOME</a>
    <a href="index2.html">GALLERY</a>
