--- a/index4.html
+++ b/index4.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <tilte> Pop Art</tilte>
-<link rel="stylesheet" href="style4.css">
-<a href="404.html">
+<link rel="stylesheet" href="style5.css">
+<a href="index.html">
 
 </head>
 <body>
