--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <body>
   <h1>404</h1>
   <p>Oops! This page doesn’t exist.</p>
-  <p><a href="index.html">Go back to Home</a></p>
+  <p><a href="index4.html">Go back to Home</a></p>
 </body>
 </html>
