Update and rename index4.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
 <h1>POP ART🎨</h1>
 <nav>
-   <a href="index4.html">HOME</a>
+   <a href="index.html">HOME</a>
    <a href="index2.html">GALLERY</a>
    <a href="index3.html">ABOUT</a>
 </nav>
