--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <tilte> Pop Art</tilte>
 <link rel="stylesheet" href="style5.css">
-<a href="index.html">
+<a href="404.html">boring</a>
 
 </head>
 <body>
