--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <tilte> Pop Art</tilte>
 <link rel="stylesheet" href="style5.css">
-<a href="404.html">boring</a>
+
 
 </head>
 <body>
@@ -23,6 +23,9 @@
 </div>
 <footer>
     <p>☠️EXCLAIMER!!! ONLY VIBRANT GUYS ARE ALLOWED HERE.</p>
+    <div class="line">
+<a href="404.html">NOT INTERESTED IN THIS WEB</a>
+</div>
 </footer>
 
 
