--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <footer>
     <p>☠️EXCLAIMER!!! ONLY VIBRANT GUYS ARE ALLOWED HERE.</p>
     <div class="line">
-<a href="404.html">NOT INTERESTED IN THIS WEB</a>
+<a href="404.html">WANT TO GET OUT OF IT!?!?!?</a>
 </div>
 </footer>
 
