--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<tilte> Pop Art</tilte>
+<title> Pop Art</title>
 <link rel="stylesheet" href="style5.css">
-
-
 </head>
 <body>
 <header>
@@ -27,8 +25,6 @@
 <a href="404.html">WANT TO GET OUT OF IT!?!?!?</a>
 </div>
 </footer>
-
-
 </body>
-
+</html>
 
