--- a/index2.html
+++ b/index2.html
@@ -2,40 +2,40 @@
 <html>
 <head>
     <title>Pop Art Gallery</title>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>POP ART GALLERY</h1>
         <nav>
-            <a href="index.html">HOME</a>
+            <a href="index1.html">HOME</a>
             <a href="index2.html">GALLERY</a>
             <a href="index3.html">ABOUT</a>
         </nav>
     </header>
 <div class="center">
     <h2>Visit a real art gallery museum:</h2>
-    <a href="https://www.tate.org.uk">Tate Museum</a>
+    <a href="https://www.tate.org.uk"target="blank">Tate Museum</a>
 </div>
 <div class="center">
-    <h2>Famous Pop Art Style Images🖼️</h2>
+    <h2>Famous Pop Art Style Images</h2>
 </div>
 <div class="gallery">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw0fyS2V-nyqqxp7WWF4cO_bvWdz_ieyVr5A&s">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi0eCNPEvhBKz-N_pZlg-b5pLOdRVwOv-NtQ&s">
-<img src="https://i.pinimg.com/1200x/4b/65/81/4b6581a2df1861695b050722b57c6a98.jpg">
-<img src="https://i.pinimg.com/736x/e9/b6/8d/e9b68dfc4187822800c3abadd8d44895.jpg">
-<img src="https://i.pinimg.com/1200x/7f/84/e2/7f84e2d3e01582e0cc2745412e36befc.jpg">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw0fyS2V-nyqqxp7WWF4cO_bvWdz_ieyVr5A&s" alt="Mona lisa">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi0eCNPEvhBKz-N_pZlg-b5pLOdRVwOv-NtQ&s" alt="1980s Bubble gum pop art">
+<img src="https://i.pinimg.com/1200x/4b/65/81/4b6581a2df1861695b050722b57c6a98.jpg" alt="Retro women with iconic glasses">
+<img src="https://i.pinimg.com/736x/e9/b6/8d/e9b68dfc4187822800c3abadd8d44895.jpg" alt="Collage of most famous people">
+<img src="https://i.pinimg.com/1200x/7f/84/e2/7f84e2d3e01582e0cc2745412e36befc.jpg" alt="Another collage of different pop colors">
 </div>
-<h2>Pop Art Gallery Display🦩</h2>
+<h2>Pop Art Gallery Display</h2>
 <div class="gallery">
-<img src="https://i.pinimg.com/1200x/84/06/fc/8406fc84e618457695096eb30a0d1e3e.jpg">
-<img src="https://i.pinimg.com/736x/c5/62/46/c562467e5f03dd5982742d1c324f8365.jpg">
-<img src="https://i.pinimg.com/736x/e9/a6/ce/e9a6ced1e0eb21f069de9def1f94b4ad.jpg">
-<img src="https://i.pinimg.com/736x/13/20/3e/13203e667b71b574a3cc88b1cdd76ea5.jpg">
+<img src="https://i.pinimg.com/1200x/84/06/fc/8406fc84e618457695096eb30a0d1e3e.jpg" alt="Museum of pop culture">
+<img src="https://i.pinimg.com/736x/c5/62/46/c562467e5f03dd5982742d1c324f8365.jpg" alt="Small posters of pop art">
+<img src="https://i.pinimg.com/736x/e9/a6/ce/e9a6ced1e0eb21f069de9def1f94b4ad.jpg" alt="A street art exhibition">
+<img src="https://i.pinimg.com/736x/13/20/3e/13203e667b71b574a3cc88b1cdd76ea5.jpg" alt="A lounge full of pop art paintings">
 </div>
 <footer>
-    <p> * DON'T FORGET TO SEARCH ABOUT POP ART *</p>
+    <p> *DON'T FORGET TO SEARCH ABOUT POP ART *</p>
 </footer>
 </body>
 
