--- a/index3.html
+++ b/index3.html
@@ -26,17 +26,17 @@
     <div class="box3">
         I like Pop Art because it is creative and fun
     </div>
-
-
     <h3>Famous Artists</h3>
-    <ul>
-        <li>Andy Warhol</li>
+    
+   <li>Andy Warhol
 <a href="https://www.instagram.com/andywarholgallery?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
-<li>Roy Lichtenstein</li>
+ </li>
+<li>Roy Lichtenstein
 <a href="https://www.instagram.com/roylichtenstein?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
-<li>Keith Haring</li>
+</li>
+<li>Keith Haring
 <a href="https://www.instagram.com/keithharing_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
-    </ul>
+</li>
 </div>
 
 <footer>
