--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pop Art Gallery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style5.css">
 </head>
 <body>
     <header>
