--- a/index2.html
+++ b/index2.html
@@ -21,11 +21,11 @@
     <h2>Famous Pop Art Style Images</h2>
 </div>
 <div class="gallery">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw0fyS2V-nyqqxp7WWF4cO_bvWdz_ieyVr5A&s" alt="Mona lisa">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi0eCNPEvhBKz-N_pZlg-b5pLOdRVwOv-NtQ&s" alt="1980s Bubble gum pop art">
-<img src="https://i.pinimg.com/1200x/4b/65/81/4b6581a2df1861695b050722b57c6a98.jpg" alt="Retro women with iconic glasses">
-<img src="https://i.pinimg.com/736x/e9/b6/8d/e9b68dfc4187822800c3abadd8d44895.jpg" alt="Collage of most famous people">
-<img src="https://i.pinimg.com/1200x/7f/84/e2/7f84e2d3e01582e0cc2745412e36befc.jpg" alt="Another collage of different pop colors">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw0fyS2V-nyqqxp7WWF4cO_bvWdz_ieyVr5A&s" alt="Pop art style Mona Lisa painting">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi0eCNPEvhBKz-N_pZlg-b5pLOdRVwOv-NtQ&s" alt="1980s bubble gum pop art illustration">
+<img src="https://i.pinimg.com/1200x/4b/65/81/4b6581a2df1861695b050722b57c6a98.jpg"  alt="Retro woman wearing iconic glasses">
+<img src="https://i.pinimg.com/736x/e9/b6/8d/e9b68dfc4187822800c3abadd8d44895.jpg" alt="Collage of famous people in pop art style">
+<img src="https://i.pinimg.com/1200x/7f/84/e2/7f84e2d3e01582e0cc2745412e36befc.jpg" alt="Colorful collage with vibrant pop art patterns">
 </div>
 <h2>Pop Art Gallery Display</h2>
 <div class="gallery">
