--- a/index3.html
+++ b/index3.html
@@ -2,6 +2,7 @@
 <html>
     <head>
    <title> Pop Art</title>
+ <link rel="icon" href="https://i.pinimg.com/736x/63/ee/3e/63ee3ee3f4acb94819ffc97d1a5690f2.jpg" type="image/jpeg">
    <link rel="stylesheet" href="style5.css">
     </head>
 
