--- a/index3.html
+++ b/index3.html
@@ -28,16 +28,20 @@
         I like Pop Art because it is creative and fun
     </div>
     <h3>Famous Artists</h3>
-    
-   <li>Andy Warhol
+    <ul>
+   <li>
+       Andy Warhol
 <a href="https://www.instagram.com/andywarholgallery?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
  </li>
-<li>Roy Lichtenstein
+<li>
+    Roy Lichtenstein
 <a href="https://www.instagram.com/roylichtenstein?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
 </li>
-<li>Keith Haring
+<li>
+    Keith Haring
 <a href="https://www.instagram.com/keithharing_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">click here to see artist's profile</a>
 </li>
+</ul>
 </div>
 
 <footer>
