--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
     </header>
 <div class="center">
     <h2>Visit a real art gallery museum:</h2>
-    <a href="https://www.tate.org.uk"target= "blank" >Tate Museum</a>
+    <a href="https://www.tate.org.uk"target= "_blank" >Tate Museum</a>
 </div>
 <div class="center">
     <h2>Famous Pop Art Style Images</h2>
